# jailbreak-roblox-trainer

./: .version  CMakeLists.txt  README.md  requirements.txt
jailbreak-roblox-trainer/: __init__.py  cli.py  config.py  trainer.py  utils.py
src/: main.cpp
src/roblox/: memory.cpp  memory.h  offsets.cpp  offsets.h
tests/: test_memory.cpp  test_trainer.py
